# video_filename_parser

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
py-vfp/: pyproject.toml
src/: lib.rs
vfp/: Cargo.toml
vfp/src/: main.rs  main_old.rs
