[package]
name = "vfp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
regex = "1.7.1"
string_enum = "0.3.2"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
# pyo3 = { version = "0.17.3", features = ["extension-module"] }

# [lib]
# # The name of the native library. This is the name which will be used in Python to import the
# # library (i.e. `import string_sum`). If you change this, you must also change the name of the
# # `#[pymodule]` in `src/lib.rs`.
# name = "vfp"
# # "cdylib" is necessary to produce a shared library for Python to import from.
# #
# # Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# # to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# # crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]
